# verifiable-rpc-sidecar

./: .dockerignore  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  cla.yml  publish.yml  warm-cache.yml
src/: attestation.rs  config.rs  dstack.rs  error.rs  health.rs  info.rs  lib.rs  main.rs  proxy.rs  server.rs  signing.rs  util.rs
tests/: dstack_baseline.rs  integration_blackbox.rs  integration_harness.rs
tests/common/: mod.rs
