[package]
name = "rpc-attest-sidecar"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Verifiable RPC sidecar — signs every JSON-RPC response with a TDX-attested key"
publish = false
rust-version = "1.75"

[lib]
name = "rpc_attest_sidecar"
path = "src/lib.rs"

[[bin]]
name = "rpc-attest-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
