[package]
name = "rpc-attest-sidecar"
version = "0.1.0"
edition = "2021"
description = "Verifiable RPC sidecar — signs every HTTP response with a TDX-attested key"
publish = false
rust-version = "1.75"

[lib]
name = "rpc_attest_sidecar"
path = "src/lib.rs"

[[bin]]
name = "rpc-attest-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast", "zeroize"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
http = "1"
http-body-util = "0.1"
httparse = "1"
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "webpki-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
zeroize = { version = "1", default-features = false, features = ["std", "derive"] }

[dev-dependencies]
serde_urlencoded = "0.7"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
